# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "bitmap"
version = "0.0.1"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Bitmap"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]

[dependencies]
error = { git = "https://github.com/nanvix/error", branch = "releases/v0.0.2" }
raw-array = { git = "https://github.com/nanvix/raw-array", branch = "releases/v0.0.2" }
