# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "bitmap"
version = "0.0.2"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Bitmap"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]

[dependencies]
error = { git = "https://github.com/nanvix/error", branch = "releases/v0.0.3" }
raw-array = { git = "https://github.com/nanvix/raw-array", branch = "releases/v0.0.3" }

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
